Closes-Bug: #1689506 - BGP Routers misalignment
Fixed the alignment issue in Family Attributes column.

--- a/webroot/common/ui/css/contrail.controller.css
+++ b/webroot/common/ui/css/contrail.controller.css
@@ -566,3 +566,8 @@ table td[class*="col-xs-"], table th[class*="col-xs-"], .row-fluid table td[clas
     text-align:left;}
 .data-cell-mirroringOptions{
     padding-bottom:0px;}
+#bgp-grid .detail-block-list-content span.sec_label~hr{
+    margin-top: 5px;
+    margin-bottom: 5px;
+    border: none;
+    }
